# Bootcamp_CMake

./: CMakeLists.txt
Bootcamp_CMake/: CMakeLists.txt  main.cpp
Bootcamp_CMake/src/: Employee.h  TableProcessing.cpp  TableProcessing.h
